--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-less": "^5.0.0",
     "less": "^4.1.3",
+    "release-it": "^15.8.0",
     "sucrase": "^3.29.0",
     "typescript": "^4.9.5",
     "unplugin-vue-define-options": "^1.2.4",
