--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "moduleResolution": "Node",
     "lib": ["esnext", "dom"],
     "resolveJsonModule": true,
+    // "types": ["/typings/vue-shim.d.ts","/typings/components.d.ts"]
   }
 }
