--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "lib": ["esnext", "dom"],
-    "types": ["unplugin-vue-define-options/macros-global" /* ... */],
+    "types": ["./typings/components.d.ts","unplugin-vue-define-options/macros-global" /* ... */],
     "resolveJsonModule": true,
   }
 }
