--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
   },
   "exclude": [
       "node_modules",
-      "**/*.test.ts"
+      "**/__tests__/**",
+      "**/tests/**",
+      "dist"
   ]
 }
